# video_transcript_kb

./: .mcp.json  README.md  Untitled-2026-05-22-2040.excalidraw  pyproject.toml  transcripts-system-build-plan.md
final_transcript/: screenpal_videos_2026-04-21_edited.csv
final_transcript/all_transcripts/: 22_Ventures_Vaginal_Probiotics_Analysis_transcribed.json  22_Ventures_Vaginal_Probiotics_Analysis_transcript.txt  AD_optmization_tutorial__1___How_to_setup_the_program_file_transcribed.json  AD_optmization_tutorial__1___How_to_setup_the_program_file_transcript.txt  AI_Tool_combining_SQP__time_series___SP_Imp_Share__Top_Search_Terms_report_transcribed.json  AI_Tool_combining_SQP__time_series___SP_Imp_Share__Top_Search_Terms_report_transcript.txt  AMC_Use_Case___LTV_V2_transcribed.json  AMC_Use_Case___LTV_V2_transcript.txt  AMC_Use_Case___LTV_transcribed.json  AMC_Use_Case___LTV_transcript.txt  AMazon_onboarding_transcribed.json  AMazon_onboarding_transcript.txt  Ad_launch____4_Product_targeting_campaign_transcribed.json  Ad_launch____4_Product_targeting_campaign_transcript.txt  Ad_program_file_improvement__1_transcribed.json  Ad_program_file_improvement__1_transcript.txt  Ad_program_improvement__2_transcribed.json  Ad_program_improvement__2_transcript.txt  Ad_program_improvement__3_transcribed.json  Ad_program_improvement__3_transcript.txt  Ad_program_improvement__4_transcribed.json  Ad_program_improvement__4_transcript.txt  Ad_report__3___Report_13_to_16_transcribed.json  Ad_report__3___Report_13_to_16_transcript.txt  Amazon_reporting_tool__1_Report_1_to_6_transcribed.json  Amazon_reporting_tool__1_Report_1_to_6_transcript.txt  Amazon_reporting_tool__2_Report_7_to_12_transcribed.json  Amazon_reporting_tool__2_Report_7_to_12_transcript.txt  Audit_SOP___unpaid___part_2_transcribed.json  Audit_SOP___unpaid___part_2_transcript.txt  Brand_registry___Nutronic_transcribed.json  Brand_registry___Nutronic_transcript.txt  Bundle_SKU_Mapping_NSC_CA_transcribed.json  Bundle_SKU_Mapping_NSC_CA_transcript.txt  Bundle_SKU_Mapping_for_NSC_Canada_transcribed.json  Bundle_SKU_Mapping_for_NSC_Canada_transcript.txt  Buy_box__stranded_inventory_removal_transcribed.json  Buy_box__stranded_inventory_removal_transcript.txt  Client_delivery_notion_template_guideline_transcribed.json  Client_delivery_notion_template_guideline_transcript.txt  (+2165 more)
packaging/: claude_desktop_config_snippet.json  install.bat  install.ps1  install.sh  package.sh
src/transcripts/: chunker.py  cli.py  config.py  embedder.py  filename_parser.py  (+3 more)
tests/: test_filename_parser.py  test_loader.py
(+5 files in other folders)
