[project]
name = "video-transcript-kb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "sentence-transformers<4",
    "mcp[cli]",
    "typer",
    "python-dateutil",
    "tqdm",
    "numpy<2",
    "rank-bm25",
    "bertopic>=0.17.4",
    "llvmlite<0.44",
]

[project.scripts]
transcripts = "transcripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcripts"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
# Intel Mac (x86_64) needs pinned versions — PyTorch/ONNX dropped support.
# Windows and ARM Mac can use latest versions.
override-dependencies = [
    "onnxruntime<=1.16.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
