[project]
name = "video-transcript-kb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "sentence-transformers<4",
    "torch",
    "mcp[cli]",
    "typer",
    "python-dateutil",
    "tqdm",
    "numpy<2",
    "rank-bm25",
    "bertopic>=0.17.4",
    "llvmlite<0.44",
]

[project.scripts]
transcripts = "transcripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcripts"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
# Intel Mac (x86_64) needs pinned onnxruntime — newer versions dropped support.
override-dependencies = [
    "onnxruntime<=1.16.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# Pin torch on Intel Mac (last version with x86_64 macOS wheels).
constraint-dependencies = [
    "torch<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# Resolve per-platform so torch can differ between Intel Mac / ARM Mac / Windows / Linux.
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

# CPU-only PyTorch on Windows (avoids ~2.5 GB CUDA wheel).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
]
